src/tests/fixtures/enums/EnumFromUnionTypeOfAliaedStringLiteralsWithDeprecated.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class SomeType {
  /** @gqlField */
  hello: MyEnum;
}

/** @deprecated Don't use this */
type Valid = "VALID";
/** @deprecated Don't use this either */
type Invalid = "INVALID";

/** @gqlEnum */
type MyEnum = Valid | Invalid;

-----------------
OUTPUT
-----------------
src/tests/fixtures/enums/EnumFromUnionTypeOfAliaedStringLiteralsWithDeprecated.ts:13:15 - error: Expected `@gqlEnum` enum members to be string literal types. For example: `'foo'`.

If you think Grats should be able to infer this union member, please report an issue at https://github.com/captbaritone/grats/issues.

13 type MyEnum = Valid | Invalid;
                 ~~~~~
src/tests/fixtures/enums/EnumFromUnionTypeOfAliaedStringLiteralsWithDeprecated.ts:13:23 - error: Expected `@gqlEnum` enum members to be string literal types. For example: `'foo'`.

If you think Grats should be able to infer this union member, please report an issue at https://github.com/captbaritone/grats/issues.

13 type MyEnum = Valid | Invalid;
                         ~~~~~~~
